[metadata]
name = dsinternals
version = 1.2.4
description = Directory Services Internals Library
url = http://github.com/p0dalirius/pydsinternals
author = Podalirius
author_email = podalirius@protonmail.com
long_description = file:README.md
long_description_content_type = text/markdown
license = GPL2
license_files = LICENSE
    classifiers=[
        "Programming Language :: Python :: 3",
        "License :: OSI Approved :: GNU General Public License v2 (GPLv2)",
        "Operating System :: OS Independent",
    ],
    python_requires='>=3.4',

[options]
python_requires = >=3.4
install_requires = 
    pyopenssl
    pycryptodomex

packages = find_namespace

[options.packages.find]
exclude =
    tests

[tox:tox]
min_version = 1.4
env_list =
    py311
    py310
    py39
    py36
    type

[testenv]
deps = 
commands = python3 -m unittest discover -v
